# ProyectoSOFTFinal

./: README.md  autoventas.db  fly.toml  main.py  orm_models.py  pyproject.toml  requirements.txt  run_render.py  run_ui.py
application/: container.py
application/factories/: cotizacion_factory.py
application/services/: catalogo_service.py  contacto_service.py  cotizacion_service.py  dashboard_service.py  testimonio_service.py
domain/entities/: cliente.py  usuario.py
domain/repositories/: cotizacion_repository.py  vehiculo_repository.py
repositories/: sqlite_cotizacion_repository.py  sqlite_testimonio_repository.py
src/application/services/: auth_service.py  cliente_service.py  notificacion_service.py
src/domain/entities/: cotizacion.py  plan_financiamiento.py  testimonio.py  vehiculo.py
src/domain/repositories/: cliente_repository.py  plan_repository.py
src/infrastructure/: db_connection.py  security.py
src/infrastructure/ai/: groq_client.py
src/infrastructure/repositories/: sqlite_cliente_repository.py  sqlite_usuario_repository.py  sqlite_vehiculo_repository.py
src/interfaces/controllers/: cotizacion_controller.py
src/interfaces/presentation/: agente_cli.py  app_ui.py  context.py  excel_reporte.py  helpers.py  pdf_cotizacion.py  pdf_reporte.py
src/interfaces/presentation/assets/: styles.css
src/repositories/: sqlite_plan_repository.py
tests/: test_agente_api.py  test_cotizacion_service.py  test_dashboard_reporte.py  test_excel_reporte.py  test_finales_autoventas.py  test_mejoras_entrega.py  test_repository.py
(+24 files in other folders)
